--- a/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvComments/EvComments.scss
+++ b/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvComments/EvComments.scss
@@ -24,6 +24,10 @@
   }
 }
 
+.acorn-we-applet .comments-posted-wrapper {
+  overflow-y: unset;
+}
+
 .comments-view-input-wrapper {
   padding: 0 2.75rem 2rem 2.75rem;
 }
