--- a/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvTaskList/EvTaskList.scss
+++ b/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvTaskList/EvTaskList.scss
@@ -16,3 +16,9 @@
     }
   }
 }
+
+.acorn-we-applet .ev-tasks-view-wrapper {
+  .ev-tasks-view-list {
+    overflow-y: unset;
+  }
+}
