--- a/web/src/components/FilterDropdown/FilterDropdown.scss
+++ b/web/src/components/FilterDropdown/FilterDropdown.scss
@@ -151,6 +151,10 @@
   }
 }
 
+.acorn-we-applet .filter-dropdown-menu {
+  overflow-y: unset;
+}
+
 .filter-selection-count {
   width: 1rem;
   height: 1rem;
