--- a/web/src/components/ProfileEditForm/ProfileEditForm.scss
+++ b/web/src/components/ProfileEditForm/ProfileEditForm.scss
@@ -65,3 +65,7 @@
     margin-top: 5rem;
   }
 }
+
+.acorn-we-applet .profile_edit_form {
+  overflow-y: unset;
+}
