--- a/web/src/components/TagPicker/TagPicker.scss
+++ b/web/src/components/TagPicker/TagPicker.scss
@@ -221,3 +221,9 @@
     }
   }
 }
+
+.acorn-we-applet .tag-picker-wrapper {
+  .tag-picker-list-wrapper {
+    overflow-y: unset;
+  }
+}
